[gd_scene load_steps=6 format=2]

[ext_resource path="res://main/Test.gd" type="Script" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://station/Station.tscn" type="PackedScene" id=3]
[ext_resource path="res://spawn_point/SpawnPoint.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/UI.tscn" type="PackedScene" id=5]

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" parent="." instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="WeaponsContainer" type="Node2D" parent="."]

[node name="AsteroidContainer" type="Node2D" parent="."]

[node name="Station" parent="." instance=ExtResource( 3 )]
position = Vector2( 960, 540 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 486, 300 )

[node name="SpawnPointsContainer" type="Node2D" parent="."]

[node name="Left" type="Node2D" parent="SpawnPointsContainer"]

[node name="SpawnPoint" parent="SpawnPointsContainer/Left" instance=ExtResource( 4 )]
position = Vector2( -180, 900 )
rotation = -0.0628318

[node name="SpawnPoint2" parent="SpawnPointsContainer/Left" instance=ExtResource( 4 )]
position = Vector2( -180, 720 )
rotation = -0.253073

[node name="SpawnPoint3" parent="SpawnPointsContainer/Left" instance=ExtResource( 4 )]
position = Vector2( -180, 540 )

[node name="SpawnPoint4" parent="SpawnPointsContainer/Left" instance=ExtResource( 4 )]
position = Vector2( -180, 360 )
rotation = 0.254818

[node name="SpawnPoint5" parent="SpawnPointsContainer/Left" instance=ExtResource( 4 )]
position = Vector2( -180, 180 )
rotation = 0.127409

[node name="SpawnPoint6" parent="SpawnPointsContainer/Left" instance=ExtResource( 4 )]
position = Vector2( -180, 0 )
rotation = 0.509636

[node name="SpawnPoint7" parent="SpawnPointsContainer/Left" instance=ExtResource( 4 )]
position = Vector2( -180, 1080 )
rotation = -0.315905

[node name="Right" type="Node2D" parent="SpawnPointsContainer"]

[node name="SpawnPoint" parent="SpawnPointsContainer/Right" instance=ExtResource( 4 )]
position = Vector2( 2101.06, 900 )
rotation = -3.10843

[node name="SpawnPoint2" parent="SpawnPointsContainer/Right" instance=ExtResource( 4 )]
position = Vector2( 2100, 720 )
rotation = 2.66686

[node name="SpawnPoint3" parent="SpawnPointsContainer/Right" instance=ExtResource( 4 )]
position = Vector2( 2100, 540 )
rotation = -3.14159

[node name="SpawnPoint4" parent="SpawnPointsContainer/Right" instance=ExtResource( 4 )]
position = Vector2( 2100, 360 )
rotation = 2.66686

[node name="SpawnPoint5" parent="SpawnPointsContainer/Right" instance=ExtResource( 4 )]
position = Vector2( 2100, 180 )
rotation = 2.66686

[node name="SpawnPoint6" parent="SpawnPointsContainer/Right" instance=ExtResource( 4 )]
position = Vector2( 2097.88, 0 )
rotation = 2.66686

[node name="SpawnPoint7" parent="SpawnPointsContainer/Right" instance=ExtResource( 4 )]
position = Vector2( 2100, 1080 )
rotation = -2.98102
